[package]
name = "deno-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2.7.0"
rustls = "0.20.6"
rustls-pemfile = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
systemstat = "0.2.2"
futures = "0.3.25"
url = "2.3.1"
savefile = "0.12.0"
urlencoding = "2.1.2"
async-smtp = "0.8.0"
sendgrid_thin = "0.3.0"
clap = "4.1.6"
base64 = "0.21.0"


