[package]
name = "deno-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4" }
actix-rt = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
md5 = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
systemstat = "0.2.2"
futures = "0.3.25"
url = "2.3.1"
urlencoding = "2.1.2"
base64 = "0.21.0"


